--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -150,8 +150,6 @@ html.is-animating .transition-swup-fade {
 .onload-animation,
 .transition-slide-in,
 .card-animation {
-  backface-visibility: hidden;
-  -webkit-font-smoothing: antialiased;
   transform: translateZ(0);
   will-change: transform;
 }
@@ -209,10 +207,6 @@ html.is-animating .transition-swup-fade {
   .card-animation {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    perspective: 1000;
   }
 }
 
